# RUNEEXTRACT-PACKAGE

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  faiss_test.meta.pkl  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: API.md  DEVELOPER.md  GAME_CHANGING_FEATURES.md  IMPLEMENTATION_STATUS.md  QUICK_REFERENCE.md  TROUBLESHOOTING.md  USER_GUIDE.md  ai.md  examples.md  features.md  rag.md  usage.md
examples/: game_changing_features_demo.py  tier1_features_demo.py
runeextract/: __init__.py  __main__.py  config.py  exceptions.py  quality.py  server.py
runeextract/agent/: __init__.py  autogen.py  crewai.py  langchain.py  langgraph.py  llamaindex.py  mcp_server.py  openai_sdk.py  pydantic_ai.py
runeextract/benchmarks/: __init__.py  runner.py
runeextract/citation/: __init__.py  engine.py  sentence.py
runeextract/cli/: __init__.py  doctor.py  eval_cli.py  main.py
runeextract/core/: __init__.py  async_extractor.py  cache.py  extraction.py  extractor.py  registry.py  router.py  schemas.py  streaming.py
runeextract/dedup/: __init__.py  minhash.py
runeextract/diff/: __init__.py  comparator.py
runeextract/embeddings/: __init__.py  onnx.py
runeextract/export/: __init__.py  adapters.py
runeextract/extractors/: __init__.py
runeextract/extractors/audio/: extractor.py
runeextract/extractors/csv/: extractor.py
runeextract/extractors/docx/: __init__.py  extractor.py
runeextract/extractors/epub/: __init__.py  extractor.py
runeextract/extractors/html/: __init__.py  extractor.py
runeextract/extractors/image/: extractor.py
runeextract/extractors/json/: extractor.py
runeextract/extractors/markdown/: __init__.py  extractor.py
runeextract/extractors/notion/: extractor.py
runeextract/extractors/pdf/: extractor.py
runeextract/extractors/pptx/: __init__.py  extractor.py
runeextract/extractors/video/: extractor.py
runeextract/extractors/xlsx/: __init__.py  extractor.py
runeextract/extractors/youtube/: extractor.py
runeextract/graph/: __init__.py  builder.py
runeextract/layout/: __init__.py  parser.py
runeextract/models/: __init__.py  chat_session.py  chunking.py  document.py  types.py
runeextract/ocr/: __init__.py
runeextract/processors/: __init__.py  ai.py  ocr.py
runeextract/processors/providers/: __init__.py  anthropic.py  bedrock.py  gemini.py  local.py  openai_compat.py
runeextract/quality/: __init__.py  levels.py
runeextract/rag/: __init__.py  analytics.py  api_server.py  auto_pipeline.py  budget.py  cache.py  compressor.py  confidence.py  context_packer.py  debugger.py  dedup_engine.py  embed_cache.py  embedding_selector.py  eval_suite.py  evaluate.py  experiments.py  fine_tune.py  graph_rag.py  hierarchical.py  hybrid_search.py  instant.py  knowledge_base.py  middleware.py  multilingual.py  multimodal.py  persistence.py  query_analyzer.py  query_router.py  rbac.py  reasoning.py  retriever.py  robust_rag.py  routing.py  semantic_cache.py  streaming.py  templates.py  tenant.py  tiered_index.py  types.py  versioning.py
runeextract/server/: __init__.py  server.py
runeextract/signing/: __init__.py  signer.py
runeextract/storage/: __init__.py  connectors.py  presigned.py
runeextract/structured/: __init__.py  extractor.py
runeextract/sync/: __init__.py  extractor.py  syncer.py  watcher.py
runeextract/tests/: conftest.py  test_agent_integrations.py  test_ai_processor.py  test_api_features.py  test_async_extraction.py  test_async_extractor.py  test_audit_features.py  test_benchmarks.py  test_cache.py  test_citation.py  test_cli.py  test_config.py  test_csv_extractor.py  test_dedup.py  test_diff.py  test_docx_extraction.py  test_exceptions.py  test_extractors.py  test_fallback_middleware.py  test_graph.py  test_hierarchical_chunking.py  test_image_extractor.py  test_integration.py  test_json_extractor.py  test_layout.py  test_models.py  test_multimodal_rag.py  test_ocr_lang.py  test_onnx_embeddings.py  test_password_protected.py  test_phase11_plus.py  test_pptx_extraction.py  test_presigned_url.py  test_quality.py  test_rag_foundation.py  test_rag_intelligence.py  test_rag_maintenance.py  test_rag_pipeline.py  test_registry.py  test_retry.py  (+15 more)
runeextract/tests/benchmarks/: test_extraction_benchmark.py
runeextract/toc/: __init__.py
runeextract/transform/: __init__.py  pipeline.py  steps.py
runeextract/utils/: __init__.py  logging.py  maturity.py  memory.py  privacy.py  rate_limiter.py  retry.py  secrets.py
runeextract/vision/: __init__.py  analyzer.py
runeextract/web/: __init__.py  crawler.py  feed.py  sitemap.py
