[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runeextract"
version = "0.1.0"
description = "One extraction API for every document type"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "RuneExtract Contributors"}
]
keywords = [
    "document-extraction",
    "pdf",
    "docx",
    "html",
    "markdown",
    "ocr",
    "rag",
    "text-extraction"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

dependencies = [
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.21",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "markdown-it-py>=3.0.0",
]

[project.optional-dependencies]
ocr = [
    "easyocr>=1.7.0",
]
ai = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
youtube = [
    "youtube-transcript-api>=0.6.0",
    "yt-dlp>=2023.0.0",
]
all = [
    "runeextract[ocr,ai,youtube,dev]",
]

[project.urls]
Homepage = "https://github.com/runeextract/runeextract"
Documentation = "https://github.com/runeextract/runeextract#readme"
Repository = "https://github.com/runeextract/runeextract"
Issues = "https://github.com/runeextract/runeextract/issues"

[project.scripts]
runeextract = "runeextract.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["runeextract*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["runeextract/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, W503"
exclude = ".git,__pycache__,build,dist,.egg-info,.venv,env"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
