[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runeextract"
version = "0.8.0"
description = "One extraction API for every document type — lightweight, zero heavy default deps"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "RuneExtract Contributors"}
]
keywords = [
    "document-extraction",
    "pdf",
    "docx",
    "html",
    "markdown",
    "ocr",
    "rag",
    "text-extraction",
    "lightweight",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

# Lightweight core: only essential extraction deps.
# Heavy deps (pandas, lxml, pdfplumber, markdown-it-py) are optional extras.
dependencies = [
    "pymupdf>=1.23.0,<2.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "python-pptx>=0.6.21,<1.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "tomli>=1.1.0,<3.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
# OCR
ocr = [
    "easyocr>=1.7.0,<2.0.0",
    "Pillow>=10.0.0,<12.0.0",
]
# AI providers
ai = ["openai>=1.0.0,<2.0.0"]
ai-anthropic = ["anthropic>=0.30.0,<1.0.0"]
ai-gemini = ["google-generativeai>=0.6.0,<1.0.0"]
# Media
youtube = ["youtube-transcript-api>=0.6.0,<1.0.0", "yt-dlp>=2024.1.0"]
notion = ["requests>=2.28.0,<3.0.0"]
epub = ["EbookLib>=0.18,<1.0.0", "beautifulsoup4>=4.12.0,<5.0.0", "lxml>=4.9.0,<6.0.0"]
audio = ["openai-whisper>=20231117,<20250000"]
video = ["opencv-python-headless>=4.8.0,<5.0.0"]
# Async
async = ["aiohttp>=3.9.0,<4.0.0"]
# RAG
rag = ["tiktoken>=0.5.0,<1.0.0", "rank-bm25>=0.2.0,<1.0.0", "numpy>=1.24.0,<3.0.0"]
embeddings = ["sentence-transformers>=2.2.0,<4.0.0"]
vector-stores = ["chromadb>=0.4.0,<1.0.0", "faiss-cpu>=1.7.0,<2.0.0"]
# Structured extraction
structured = ["pydantic>=2.0.0,<3.0.0"]
# Protected files
protected = ["msoffcrypto-tool>=5.0.0,<6.0.0"]
# Document signing
signing = ["cryptography>=41.0.0,<45.0.0"]
# WebSocket / HTTP server
server = ["aiohttp>=3.9.0,<4.0.0"]
# Agent / MCP
mcp = ["mcp>=1.0.0,<2.0.0"]
# Heavy / optional format support (moved out of core)
dataframe = ["pandas>=2.0.0,<3.0.0"]
xml = ["lxml>=4.9.0,<6.0.0"]
pdf-alt = ["pdfplumber>=0.10.0,<1.0.0"]
# Meta extras
all = [
    "runeextract[ocr,ai,ai-anthropic,ai-gemini,youtube,notion,epub,async,rag,embeddings,vector-stores,audio,video,structured,protected,signing,server,mcp,dataframe,xml,pdf-alt]",
]
auto-rag = ["runeextract[rag,embeddings,vector-stores]"]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-cov>=4.1.0,<7.0.0",
    "pytest-asyncio>=0.21.0,<3.0.0",
    "ruff>=0.1.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/Rohithdgrr/RUNEEXTRACT-PACKAGE"
Documentation = "https://github.com/Rohithdgrr/RUNEEXTRACT-PACKAGE#readme"
Repository = "https://github.com/Rohithdgrr/RUNEEXTRACT-PACKAGE"
Issues = "https://github.com/Rohithdgrr/RUNEEXTRACT-PACKAGE/issues"

[project.scripts]
runeextract = "runeextract.cli.main:main"
runeextract-mcp = "runeextract.agent.mcp_server:main_cli"

[project.entry-points."runeextract.extractors"]
pdf = "runeextract.extractors.pdf.extractor:PDFExtractor"
docx = "runeextract.extractors.docx.extractor:DocxExtractor"
pptx = "runeextract.extractors.pptx.extractor:PptxExtractor"
xlsx = "runeextract.extractors.xlsx.extractor:XlsxExtractor"
html = "runeextract.extractors.html.extractor:HtmlExtractor"
markdown = "runeextract.extractors.markdown.extractor:MarkdownExtractor"
csv = "runeextract.extractors.csv.extractor:CsvExtractor"
json = "runeextract.extractors.json.extractor:JsonExtractor"
image = "runeextract.extractors.image.extractor:ImageExtractor"
youtube = "runeextract.extractors.youtube.extractor:YoutubeExtractor"
notion = "runeextract.extractors.notion.extractor:NotionExtractor"
epub = "runeextract.extractors.epub.extractor:EpubExtractor"
audio = "runeextract.extractors.audio.extractor:AudioExtractor"
video = "runeextract.extractors.video.extractor:VideoExtractor"

[tool.setuptools.packages.find]
where = ["."]
include = ["runeextract*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "W503"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["runeextract/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning",
]


